# fungus

./: .gitignore  .travis.yml  Cargo.toml  Makefile  README.md  rustfmt.toml
.githooks/: commit-msg  pre-commit  utils
core/: Cargo.toml
core/src/: env_error.rs  err.rs  error.rs  io_error.rs  iter.rs  iter_error.rs  lib.rs  miscs.rs  option.rs  path_error.rs  result.rs  sys_error.rs
edit/: Cargo.toml
edit/src/: lib.rs
errors/: Cargo.toml
errors/src/: err.rs  lib.rs
examples/: color.rs  defer.rs  function.rs  term.rs
laconic/: Cargo.toml
logs/: Cargo.toml
logs/src/: lib.rs  logger.rs  output.rs
src/: agent.rs  exec.rs  file.rs  finally.rs  foo.rs  iter.rs  iter_error.rs  lib.rs  libc.rs  logger.rs  os.rs  os_error.rs  path.rs  path_error.rs  result.rs  sys.rs  user.rs  user_error.rs
src/arch/: abs.rs  mod.rs
src/core/: arch_error.rs  assert.rs  defer.rs  error.rs  file_error.rs  finally.rs  git_error.rs  iter.rs  iter_error.rs  logger.rs  macros.rs  miscs.rs  mod.rs  option.rs  os_error.rs  path_error.rs  string.rs  string_error.rs  user_error.rs
src/enc/: gzip.rs  mod.rs  tar.rs
src/error/: error.rs  file_error.rs  iter_error.rs  string_error.rs  user_error.rs
src/errors/: error.rs  file_error.rs  iter_error.rs  mod.rs  os_error.rs  path_error.rs  string_error.rs  user_error.rs
src/net/: agent.rs  git.rs  mod.rs
src/sys/: env.rs  exec.rs  file.rs  libc.rs  mod.rs  os.rs  path.rs  term.rs  user.rs
src/unit/: bytes.rs  mod.rs  time.rs
sys/: Cargo.toml  README.md
sys/src/: file.rs  lib.rs  path.rs  user.rs  users.rs
sys/tests/: integration.rs
tests/: alpine-base.tar  alpine-base.tgz  integration.rs
