[package]
name = "fungus"
version = "0.1.1"
edition = "2018"
authors = ["phR0ze"]
license = "MIT OR Apache-2.0"
description = "Rust utilities to reduce code verbosity"
readme = "README.md"
homepage = "https://github.com/phR0ze/fungus"
repository = "https://github.com/phR0ze/fungus"
exclude = [
  "docs",
  "examples",
  ".git",
  ".githooks",
  ".github",
  "tests",
  "benches",
  "target",
  ".vscode"
]

# Higher the opt-level value the slower the compile time
[profile.release]
opt-level = 3   # Optimize for speed over size
lto = true      # Futher assist in optimization

[profile.dev]
opt-level = 0   # Default no optimization

[dependencies]
libc ="0.2.*"
glob = "0.3.*"
gory = "0.1.*"
regex = "1.4.*"
fastrand = "1.4.*"
walkdir = "2.3.*"
lazy_static = "1.4.*"

# Optional dependencies based on features
blake2 = { version = "0.9.*", optional = true }
flate2 = { version = "1.0.*", optional = true }
tar = { package = "tar", version = "0.4.*", optional = true }

[features]
default = ["_enc_", "_crypto_"]

# Includes encoders/decoders
_enc_ = ["flate2", "tar"]

# Includes cypto dependent functions/types/mods
_crypto_ = ["blake2"]

# Examples and tests are built with these dependencies
[dev-dependencies]
