[package]
name = "core"
version = "0.0.57"
edition = "2018"
authors = ["phR0ze"]
license = "MIT OR Apache-2.0"
description = "Core utilities"
readme = "README.md"
homepage = "https://github.com/phR0ze/rs/core"
repository = "https://github.com/phR0ze/rs/core"

[dependencies]
glob = "0.3.0"
failure = "0.1.6"
failure_derive = "0.1.6"