[package]
name = "edit"
version = "0.0.44"
edition = "2018"
authors = ["phR0ze"]
license = "MIT OR Apache-2.0"
description = "File editing utilities"
readme = "README.md"
homepage = "https://github.com/phR0ze/rs/sys"
repository = "https://github.com/phR0ze/rs/sys"

[dependencies]
core = { path = "../core" }
