[package]
name = "logs"
version = "0.0.47"
edition = "2018"
authors = ["phR0ze"]
license = "MIT OR Apache-2.0"
description = "Logging utilities"
readme = "README.md"
homepage = "https://github.com/phR0ze/rs/logs"
repository = "https://github.com/phR0ze/rs/logs"

[dependencies]
log = { version = "0.4.8", features = ["std"] }
chrono = "0.4.9"
colored = "1.8.0"
core = { path = "../core" }
